Revision history for Perl extension WebService::Solr.

0.03  XXX
    - fix typo (Thanks cog)
    - pod fixes

0.02  Thu Oct 09 2008
    - fix pager creation, missing prereq
    - add a simple facet_counts() shortcut method

0.01  Tue Oct 07 2008
    - original version;