@@ -5,6 +5,7 @@ use Test::More tests => 10;
 use Test::Mock::LWP::UserAgent;
 
 use XML::Simple;
+use HTTP::Headers;
 
 $Mock_ua->mock(
     request => sub {
@@ -29,8 +30,8 @@ sub _test_req {
     is( $_[ 2 ]->path, '/solr/update', 'add() path' );
     is_deeply( { $_[ 2 ]->query_form }, { wt => 'json' }, 'add() params' );
     is_deeply(
-        $_[ 3 ],
-        [ 'Content_Type', 'text/xml; charset=utf-8' ],
+        $_[ 3 ]->header( 'Content_Type' ),
+        'text/xml; charset=utf-8',
         'add() headers'
     );
     my $struct = XMLin( $_[ 4 ], KeepRoot => 1 );
