@@ -3,6 +3,7 @@ Revision history for Perl extension WebService::Solr.
 0.03  XXX
     - fix typo (Thanks cog)
     - pod fixes
+    - try to work around old LWP versions when setting HTTP headers
 
 0.02  Thu Oct 09 2008
     - fix pager creation, missing prereq
